# MycoPrep

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  release-please-config.json
.github/workflows/: ci.yml  release.yml
assets/models_mtb/: best_model.pth  final_model.pth  training_config.json
data/labeled_data/: labels.csv  metadata.json
data/labeled_data/crops/: ATc+__parB-mCherry__dnaE1__R1_focused__fov000__cell0001__1777123578_000.npy  ATc+__parB-mCherry__dnaE1__R1_focused__fov000__cell0002__1777123578_001.npy  ATc+__parB-mCherry__dnaE1__R1_focused__fov000__cell0003__1777123578_002.npy  ATc+__parB-mCherry__dnaE1__R1_focused__fov000__cell0004__1777123578_003.npy  ATc+__parB-mCherry__dnaE1__R1_focused__fov000__cell0005__1777123578_004.npy  ATc+__parB-mCherry__dnaE1__R1_focused__fov000__cell0006__1777123578_005.npy  ATc+__parB-mCherry__dnaE1__R1_focused__fov000__cell0007__1777123578_006.npy  ATc+__parB-mCherry__dnaE1__R1_focused__fov000__cell0008__1777123578_007.npy  ATc+__parB-mCherry__dnaE1__R1_focused__fov000__cell0009__1777123578_008.npy  ATc+__parB-mCherry__dnaE1__R1_focused__fov000__cell0010__1777123578_009.npy  ATc+__parB-mCherry__dnaE1__R1_focused__fov000__cell0011__1777123578_010.npy  (+181 more)
design_review/: CRITIQUE.md
packaging/: mycoprep.spec
scripts/: drop_model.py  inspect_embeddings.py  relink_library.py
src/mycoprep/: __init__.py  __main__.py
src/mycoprep/core/: __init__.py  api.py  (+8 more)
tests/: conftest.py  test_api_metadata.py  test_channel_id.py  test_quality_filters.py  test_representation_eval.py  test_tiling.py  test_well_id.py
(+75 files in other folders)
