[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mycoprep"
version = "0.1.0"
description = "MycoPrep: bacterial microscopy pre-processing pipeline with PyQt6 GUI (focus picking, FOV split, Cellpose-SAM segmentation, cell-quality classification)"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "scikit-image>=0.22",
    "scikit-learn",
    "tifffile>=2024.1.30",
    "czifile",
    "pylibCZIrw>=4.1",
    "matplotlib>=3.7",
    "typer>=0.12",
    "cellpose",
    "torch",
    "torchvision",
    "pandas",
    "pyarrow",
    "h5py",
    "PyQt6>=6.5",
    "pyqtgraph>=0.13",
    "qtawesome>=1.3",
    "umap-learn>=0.5",
    "plotly>=5.20",
    "PyQt6-WebEngine>=6.5",
]

[project.optional-dependencies]
napari = ["napari"]
profiling = ["harmonypy>=0.0.9"]
test = ["pytest>=8", "pytest-qt>=4"]

[project.scripts]
mycoprep = "mycoprep.gui.app:main"
mycoprep-cli = "mycoprep.core.cli:app"
mycoprep-focus = "mycoprep.core.focus.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"mycoprep.core" = ["models/*.pth"]
